# tts-backup

./: README.rst  pyproject.toml  setup.py
src/tts_tools/: libtts.py  util.py
src/tts_tools/backup/: __init__.py  cli.py  gui.py
src/tts_tools/prefetch/: __init__.py  cli.py  gui.py
