[build-system]
requires = [ "setuptools>=42", "versioningit", ]
build-backend = "setuptools.build_meta"

[tool.versioningit]

[project]
name="tts-backup"
authors = [
    {name = "Sebastian Reuße", email="seb@wirrsal.net"},
    {name = "Marcus Kellerman", email="sharkus@gmail.com"},
]
description = "Backup Tabletop Simulator saves and assets into comprehensive Zip files."
readme = "README.rst"
requires-python = ">=3.8"
dynamic = ["version"]
license = {text = "GPL3"}
dependencies = [
    "alive-progress==3.1.4",
]

[project.urls]
Repository = "https://github.com/sharkusk/tts-backup"

[project.optional-dependencies]
dev = [
    "pytest==6.2.2",
    "pytest-black==0.3.12",
    "pytest-flake8==1.0.7",
    "pytest-isort==1.3.0",
    "isort==5.7.0",
]

[project.scripts]
tts-backup = "tts_tools.backup.cli:console_entry"
tts-prefetch = "tts_tools.prefetch.cli:console_entry"

[project.gui-scripts]
tts-backup-gui = "tts_tools.backup.gui:gui_entry"
tts-prefetch-gui = "tts_tools.prefetch.gui:gui_entry"

[tool.black]
line-length = 79

[isort]
force_alphabetical_sort = true
force_single_line = true
lines_after_imports = 2
line_length = 79
use_parentheses = true
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--black --flake8 --isort"